# ophyd-epicsrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: integration.yml  release.yml
crates/ophyd-epicsrs/: Cargo.toml
crates/ophyd-epicsrs/src/: context.rs  convert.rs  lib.rs  pv.rs  pva.rs  pva_convert.rs  pva_put.rs  runtime.rs  safe_log.rs
docs/: detector_module_roadmap.md  pva_single_get_async_perf.md
examples/: bench_flyscan_waveform.py  bench_vs_aioca_p4p.py  bench_vs_others.py  bench_vs_pyepics.py  mini_beamline.py  mini_beamline_async.py
python/ophyd_epicsrs/: __init__.py  _async_helpers.py  _contexts.py  _shim.py
python/ophyd_epicsrs/detector/: __init__.py  _converter.py  _factory.py  _signal_backend.py
python/ophyd_epicsrs/ophyd_async/: __init__.py  _converter.py  _signal_backend.py
tests/: test_converter.py  test_factory.py  test_shim.py
tests/integration/: bench_vs_pyepics.py  conftest.py  test_bluesky_plans.py  test_datatypes.py  test_mini_beamline.py  test_multi_axis_devices.py  test_ophyd_async_devices.py  test_performance.py  test_pva_specific.py  test_robustness.py
tests/integration/upstream/: conftest.py  test_device.py  test_epicsmotor.py  test_positioner.py  test_signal.py  test_signalpositioner.py
