[workspace]
resolver = "3"
members = ["crates/ophyd-epicsrs"]

[workspace.package]
edition = "2024"
# 1.88 — let-chains (`if let X && let Y`) used by epics-base-rs 0.13.0.
# Earlier rust-version = "1.85" was a lie; CI builds at 1.85 hit E0658
# in record_instance.rs.
rust-version = "1.88"
license = "BSD-3-Clause"

# `panic = "unwind"` is REQUIRED on both profiles so the
# `safe_warn!` / `safe_call!` panic-guard macros (see safe_log.rs)
# can actually catch panics from pyo3-log + Python::with_gil during
# interpreter finalize. Switching to `panic = "abort"` would render
# every catch_unwind in this crate inert and re-introduce the
# finalize-time crash class.
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
