[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ophyd-epicsrs"
version = "0.5.2"
requires-python = ">=3.8"
dependencies = ["ophyd>=1.9", "ophyd-async>=0.16", "bluesky>=1.13"]
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ophyd_epicsrs._native"
manifest-path = "crates/ophyd-epicsrs/Cargo.toml"
python-source = "python"
