[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ophyd-epicsrs"
version = "0.6.7"
# Python 3.8/3.9 are EOL and ophyd-async 0.16 already requires 3.10+.
# Keep abi3-py38 wheel tag in maturin so older runtimes that link
# against this build are still binary-compatible, but signal the
# expected source-level minimum here.
requires-python = ">=3.10"
dependencies = ["ophyd>=1.9", "ophyd-async>=0.16", "bluesky>=1.13"]
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ophyd_epicsrs._native"
manifest-path = "crates/ophyd-epicsrs/Cargo.toml"
python-source = "python"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
